--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "version": "1.4.10",
   "private": true,
-  "packageManager": "pnpm@9.15.2",
+  "packageManager": "pnpm@10.4.0",
   "author": "LoTwT <l709937065@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -17,15 +17,18 @@
   },
   "devDependencies": {
     "@ayingott/eslint-config": "workspace:*",
-    "@ayingott/prettier-config": "^1.2.9",
-    "@types/node": "^22.10.2",
-    "bumpp": "^9.9.2",
-    "eslint": "^9.17.0",
-    "lint-staged": "^15.3.0",
-    "prettier": "^3.4.2",
+    "@ayingott/prettier-config": "^2.0.0",
+    "@types/node": "^22.13.4",
+    "bumpp": "^10.0.3",
+    "eslint": "^9.20.1",
+    "lint-staged": "^15.4.3",
+    "prettier": "^3.5.1",
     "simple-git-hooks": "^2.11.1",
-    "taze": "^0.18.0",
-    "typescript": "^5.7.2"
+    "taze": "^18.5.0",
+    "typescript": "^5.7.3"
+  },
+  "pnpm": {
+    "neverBuiltDependencies": []
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm exec lint-staged"
